ulink-web-reactjs/config-k8s/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-reactjs-ingress
  labels:
    app.kubernetes.io/name: web-antikvariat
    app.kubernetes.io/instance: web-reactjs-2020
    app.kubernetes.io/version: 2020.1.x
    app.kubernetes.io/component: web-frontend
    app.kubernetes.io/part-of: baet-ulink
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: www.ulink.no
    http:
      paths:
        - backend:
            serviceName: web-hobby
            servicePort: 4048
  - host: www2.ulink.no
    http:
      paths:
      - backend:
          serviceName: web-reactjs-service
          servicePort: 4048

  - host: www.baet.no
    http:
      paths:
      - backend:
          serviceName: web-reactjs-service
          servicePort: 4048
  - host: www.diz.link
    http:
      paths:
      - backend:
          serviceName: web-reactjs-service
          servicePort: 4048
